<resources>
    <string name="app_name">EY Weather</string>
    <string name="weather_data">Weather Data</string>
    <string name="back_button">Back button</string>
    <string name="city">City</string>
    <string name="conditions">Conditions</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp">Min. Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="co_ordinates">Co-ordinates</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>